fix menu alignment

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -25,7 +25,7 @@
     font-weight: bold;
     background: #fff;
     box-sizing: border-box;
-
+    min-height: 138px;
     &.show {
       display: block;
     }
